--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/lit_logo_svg_icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="hTrlhwUZcnhD8WHQaqgCDkIIET2z4Kk_QZVTWvaN36k" />
+  
   <title>Literary SubCouncil HBTU</title>
   <style>
     #preloader {
