--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div id="preloader">
     <video autoplay loop muted playsinline width="300">
       <source src="./Loader.mp4" type="video/mp4">
-      Your browser does not support the video tag.
+        Literary SubCouncil HBTU.
     </video>
   </div>
   <div id="root"></div>
