--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="hTrlhwUZcnhD8WHQaqgCDkIIET2z4Kk_QZVTWvaN36k" />
   
+  <!-- <link rel="preload" href="/fonts/slick.woff" as="font" type="font/woff" crossorigin="anonymous">
+<link rel="preload" href="/fonts/slick.ttf" as="font" type="font/ttf" crossorigin="anonymous"> -->
+
   <title>Literary SubCouncil HBTU</title>
   <style>
     #preloader {
